--- a/packages/app/src/pages/styles.css
+++ b/packages/app/src/pages/styles.css
@@ -1,36 +1,18 @@
 .tooltip {
     position: relative;
     display: inline-block;
-    border-bottom: 1px dotted #444;
-    margin-left: 22px;
   }
   
   .tooltip .tooltiptext {
-    width: 100px;
-    background-color: #444;
-    color: #f0f0f0;
-    opacity: 0.8;
+    font-size: 0.8rem;
+    width: 60px;
+    color: #555;
     text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
     position: absolute;
     z-index: 1;
-    bottom: 150%;
-    left: 50%;
-    margin-left: -60px;
+    top: 4px;
+    left: -20px;
+    line-height: 1.3;
+    user-select: none;
   }
   
-  .tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #444 transparent transparent transparent;
-  }
- 
-  .slider-ticks {
-    position: relative;
-  }
