--- a/packages/app/src/pages/styles.css
+++ b/packages/app/src/pages/styles.css
@@ -16,3 +16,16 @@
     user-select: none;
   }
   
+  .delay-fade {
+    animation-name: fade;
+    animation-duration: 3s;
+ 
+  }
+
+/* Fade in animation with intial buffer to prevent flashing */
+  @keyframes fade {
+  0% {opacity: 0;}
+  50% {opacity: 0;}
+  100% {opacity: 1 ;}
+}
+  
