--- a/packages/app/src/pages/styles.css
+++ b/packages/app/src/pages/styles.css
@@ -1,3 +1,14 @@
+p, ul {
+  margin-bottom: 1rem;
+}
+li {
+  margin-bottom: .6rem;
+  list-style: inline;
+  margin-left: 1rem;
+  padding-left: .5rem;
+}
+
+
 .tooltip {
     position: relative;
     display: inline-block;
